--- a/JobCandidate.API/appsettings.json
+++ b/JobCandidate.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=JobCandidates;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
