--- a/JobCandidate.API/JobCandidate.API.csproj
+++ b/JobCandidate.API/JobCandidate.API.csproj
@@ -7,7 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.31" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.31">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JobCandidate.ORM\JobCandidate.ORM.csproj" />
+    <ProjectReference Include="..\JobCandidate.Service\JobCandidate.Service.csproj" />
   </ItemGroup>
 
 </Project>
