--- a/JobCandidate.API/appsettings.json
+++ b/JobCandidate.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=JobCandidates;Integrated Security=True"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=JobCandidatesDB;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
