1. Added Candidate Service and Interface to implement AddOrUpdate Candidate. 2. Inject Candidate Service and Interface to Program.cs

--- a/JobCandidate.Service/JobCandidate.Service.csproj
+++ b/JobCandidate.Service/JobCandidate.Service.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JobCandidate.Domain\JobCandidate.Domain.csproj" />
+    <ProjectReference Include="..\JobCandidate.ORM\JobCandidate.ORM.csproj" />
+  </ItemGroup>
+
 </Project>
