--- a/JobCandidate.UnitTest/JobCandidate.UnitTest.csproj
+++ b/JobCandidate.UnitTest/JobCandidate.UnitTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,8 +12,14 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JobCandidate.ORM\JobCandidate.ORM.csproj" />
+    <ProjectReference Include="..\JobCandidate.Service\JobCandidate.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
